# expand-brace

./: .gitignore  CMakeLists.txt
include/: expand-brace.hpp
src/: expand-brace.cpp  node.cpp  node.hpp  syntax.txt
test/: CMakeLists.txt  complex.cpp  simple.cpp
